# tenis_ai_trainer

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  blehr_sens.h  gatt_svr.c  main.c  main.h
main/ble/: ble.c  ble.h  ble_services.c  ble_services.h
main/ble/helpers/: ble_device_util.c  ble_device_util.h
main/ble/services/: hit_service.c  hit_service.h  manufacture_service.c  manufacture_service.h
main/buzzer/: buzzer.c  buzzer.h
main/global_control/: global_control.c  global_control.h
main/helpers/: utils.c  utils.h
main/hit_recording_handler/: hit_recording_handler.c  hit_recording_handler.h
main/icm/: icm.c  icm.h
main/storage/: ble_storage.c  ble_storage.h  storage.c  storage.h
main/touch_control/: touch_control.c  touch_control.h
